# sui-sender-indexer

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deps.yml
migrations/2024-05-01-000000_blobs/: down.sql  up.sql
migrations/2024-06-01-000000_blob_ids/: down.sql  up.sql
migrations/2025-01-20-060131_senders/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
