[package]
name = "sui-sender-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.61"
clap = { version = "4.4", features = ["derive"] }
diesel = "2.2"
diesel_migrations = "2.2"
diesel-async = "0.5"
prometheus = "0.13.3"
tokio = "1.36.0"
tokio-util = "0.7.10"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"
url = "2.3.1"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
