[package]
name = "sui-sender-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.61"
clap = { version = "4.4", features = ["derive"] }
diesel = "2.2"
diesel_migrations = "2.2"
diesel-async = "0.5"
tokio = "1.43.0"
url = "2.3.1"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
